--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libi2c-dev libdbus-1-dev pkg-config
+          sudo apt-get install -y libi2c-dev libdbus-1-dev libudev-dev pkg-config
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
