--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -20,3 +20,84 @@ jobs:
         with:
           release-type: rust
 
+  build-macos:
+    needs: release-please
+    if: ${{ needs.release-please.outputs.release_created }}
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Build core library
+        run: cargo build --release
+
+      - name: Build macOS app
+        run: |
+          cp include/monitor_core.h apps/macos/Sources/CMonitorCore/
+          cd apps/macos
+          swift build -c release
+          ./build-app.sh
+
+      - name: Upload macOS app
+        uses: actions/upload-artifact@v4
+        with:
+          name: MonitorSwitch-macos
+          path: apps/macos/MonitorSwitch.app
+
+  build-linux:
+    needs: release-please
+    if: ${{ needs.release-please.outputs.release_created }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libi2c-dev libdbus-1-dev libudev-dev pkg-config
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Build core library
+        run: cargo build --release
+
+      - name: Build Linux app
+        run: cd apps/linux && cargo build --release
+
+      - name: Upload Linux binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: monitor-switch-linux
+          path: apps/linux/target/release/monitor-switch
+
+  upload-assets:
+    needs: [release-please, build-macos, build-linux]
+    if: ${{ needs.release-please.outputs.release_created }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download macOS artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: MonitorSwitch-macos
+          path: MonitorSwitch.app
+
+      - name: Download Linux artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: monitor-switch-linux
+          path: linux
+
+      - name: Create macOS zip
+        run: zip -r MonitorSwitch-macos.zip MonitorSwitch.app
+
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ needs.release-please.outputs.tag_name }}
+          files: |
+            MonitorSwitch-macos.zip
+            linux/monitor-switch
+
