feat: rewrite Linux app with GTK4 + libadwaita
- Replace ksni tray app with modern GTK4/Adwaita popup window
- Add preferences window for managing aliases and favorites
- Add XDG autostart support for launch at login
- Match macOS app feature parity
- Update CI to install GTK4 and libadwaita dependencies

The app now spawns as a popup window (ideal for waybar/hyprland integration)
rather than a persistent system tray daemon.

--- a/apps/linux/Cargo.toml
+++ b/apps/linux/Cargo.toml
@@ -9,5 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 monitor-core = { path = "../.." }
-ksni = { version = "0.3", features = ["blocking"] }
+gtk4 = { version = "0.9", features = ["v4_12"] }
+libadwaita = { version = "0.7", features = ["v1_4"] }
+dirs = "6"
 
