--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -56,7 +56,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libi2c-dev libdbus-1-dev libudev-dev pkg-config
+          sudo apt-get install -y libi2c-dev libdbus-1-dev libudev-dev pkg-config \
+            libgtk-4-dev libadwaita-1-dev
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
