--- a/apps/linux/Cargo.toml
+++ b/apps/linux/Cargo.toml
@@ -13,3 +13,6 @@ gtk4 = { version = "0.9", features = ["v4_12"] }
 libadwaita = { version = "0.7", features = ["v1_4"] }
 dirs = "6"
 
+[build-dependencies]
+glib-build-tools = "0.20"
+
